--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "puppeteer": "^13.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
