--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "theta-lambda-beta-website",
   "version": "1.0.0",
   "description": "",
-  "main": "scripts.js",
+  "main": "index.html",
   "devDependencies": {
     "jest": "^26.6.3",
     "jest-puppeteer": "^6.1.0",
